# Backpropagation-in-cpp

./: CMakeLists.txt  LICENSE  README.md  dataset.cpp  dataset.h  main.cpp  neural_network.cpp  neural_network.h
